# cirrus

./: Makefile  README.md  cirrus.cabal
app/: Main.hs
src/: Cirrus.hs
src/Cirrus/: Decode.hs  Deploy.hs  Encode.hs  Types.hs
tests/: CirrusSpec.hs  fixture.json  fixture.yml
