name:                cirrus
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Alex Smith
maintainer:          ags@fastmail.fm
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Cirrus
    Cirrus.Decode
    Cirrus.Deploy
    Cirrus.Encode
    Cirrus.Types
  build-depends:
      base >=4.8 && <4.9
    , aeson >=0.9 && <0.10
    , aeson-pretty >=0.7 && <0.8
    , amazonka >=1.2 && <1.3
    , amazonka-cloudformation >=1.2 && <1.3
    , amazonka-ec2 >=1.2 && <1.3
    , bytestring >=0.10 && <0.11
    , exceptions >=0.8 && <0.9
    , transformers >=0.4 && <0.5
    , lens >=4.12 && <4.13
    , text >=1.2 && <1.3
    , vector >=0.11 && <0.12
    , yaml >=0.8 && <0.9

executable cirrus
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base
    , bytestring
    , cirrus
    , optparse-applicative >=0.11 && <0.12
    , text

test-suite tests
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:
      base
    , amazonka-ec2
    , bytestring
    , cirrus
    , hspec >=2.1 && <2.2
